--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
     lb:
-        image: 3dsinteractive/nginx:1.12
+        image: jengweb/nginx:1.12
         ports:
             - 80:8080
         depends_on:
@@ -12,7 +12,7 @@ services:
             - ./dockers/web/lb/logs:/opt/bitnami/nginx/logs
             - ./dockers/web/lb/nginx:/bitnami/nginx
     web1:
-        image: 3dsinteractive/nginx:1.12
+        image: jengweb/nginx:1.12
         depends_on:
             - web1-phpfpm
         volumes:
@@ -20,12 +20,12 @@ services:
             - ./dockers/web/web1/nginx:/bitnami/nginx
             - ./web:/app
     web1-phpfpm:
-        image: 3dsinteractive/php-fpm:7.1
+        image: jengweb/php-fpm:7.1
         volumes:
             - ./dockers/web/web1/phpfpm:/bitnami/php-fpm
             - ./web:/app
     web2:
-        image: 3dsinteractive/nginx:1.12
+        image: jengweb/nginx:1.12
         depends_on:
             - web2-phpfpm
         volumes:
@@ -33,12 +33,12 @@ services:
             - ./dockers/web/web2/nginx:/bitnami/nginx
             - ./web:/app
     web2-phpfpm:
-        image: 3dsinteractive/php-fpm:7.1
+        image: jengweb/php-fpm:7.1
         volumes:
             - ./dockers/web/web2/phpfpm:/bitnami/php-fpm
             - ./web:/app
     mysql:
-        image: 3dsinteractive/mysql:5.7
+        image: jengweb/mysql:5.7
         volumes:
             - ./dockers/web/db/data:/bitnami/mysql
         environment:
