--- a/web/.env
+++ b/web/.env
@@ -5,8 +5,8 @@ APP_URL=http://laravel-quickstart.local
 
 DB_HOST=mysql
 DB_DATABASE=my_database
-DB_USERNAME=jengweb
-DB_PASSWORD=isyl]y[jengweb
+DB_USERNAME=root
+DB_PASSWORD=jengweb
 
 DBTEST_HOST=mysqltest
 DBTEST_DATABASE=my_database
